# cmigemo-module

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build  meson.options
cmake/: FindCMigemo.cmake  FindEmacs.cmake
scripts/: compute-default.py
src/: emacs-module.c
subprojects/: migemo.wrap
subprojects/packagefiles/migemo/: cmigemo-module.patch  meson-build.patch  meson.build  meson.options
